# karting-center

./: .gitignore  DOCKER.md  README.md  RUN_LOCAL.md  docker-compose.yml
01-analysis/: README.md  Отчёт.md
01-analysis/0-customer-brief/: customer-brief.md
01-analysis/1-elicitation/: customer-questions.md  domain-description.md
01-analysis/2-requirements/: business-requirements.md  functional-requirements.md  non-functional-requirements.md  use-cases.md  user-stories.md
02-development/: BE_IMPLEMENTATION_PLAN.md  CMP_CLIENT_IMPLEMENTATION_PLAN.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  contract_check.py  dependencies.py  errors.py  logging_config.py  main.py  ports.py  security.py
backend/app/adapters/: __init__.py  existing.py  fixtures.py
backend/app/contracts/: __init__.py  auth.py  bookings.py  common.py  marshals.py  notifications.py  profile.py  slots.py
backend/app/domain/: __init__.py  clock.py  loyalty.py  models.py  policies.py
backend/app/routers/: __init__.py  auth.py  bookings.py  marshals.py  notifications.py  profile.py  slots.py
backend/tests/: conftest.py  test_auth.py  test_bookings.py  test_cancellation.py  test_catalog.py  test_concurrency.py  test_health_and_contract.py  test_loyalty.py  test_marshal_ratings.py  test_notifications.py  test_policies.py  test_profile.py  test_security.py
client/: .dockerignore  Dockerfile  README.md  check.ps1  pubspec.yaml
client/lib/: main.dart
docs/: README.md  implementation-report.md
(+159 files in other folders)
